# classctl

./: .gitignore  CONTEXT.md  GUIDE.md  INSTALL.md  INSTALL.txt  README.md  SPECS.md  install.sh  lan_ip.py  pyproject.toml
classctl/: __main__.py
classctl/core/: config.py  config_validator.py  discovery.py  error_detector.py  lan_ip.py  pipeline_runner.py  run_state_machine.py  script_executor.py  shutdown.py  ssh_poller.py  wol.py
classctl/web/: app.py
classctl/web/static/: index.html
dev/: start_demo.sh  start_demo_remote.sh  stop_demo.sh  stop_demo_remote.sh
docs/adr/: 0001-web-frontend-over-desktop-gui.md  0002-docker-ssh-integration-testing.md
tests/docker/: Dockerfile.ssh  fake_script.sh
tests/integration/: conftest.py  test_pipeline_runner.py  test_script_executor.py  test_ssh_fixture.py  test_ssh_poller.py
tests/unit/: test_app.py  test_classrooms_api.py  test_config.py  test_config_crud.py  test_config_validator.py  test_discovery.py  test_discovery_api.py  test_error_detector.py  test_error_patterns_api.py  test_machine_registry.py  test_machines_api.py  test_pipeline_runner.py  test_run_api.py  test_run_state_machine.py  test_shutdown_api.py  test_ssh_poller_config.py
