[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "classctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "asyncssh>=2.14",
    "wakeonlan>=3.1",
    "netifaces>=0.11",
    "scapy>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # for FastAPI test client
    "docker>=7",    # for integration test SSH containers
]

[project.scripts]
classctl = "classctl.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["classctl*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Docker (run with -m integration)",
]
